# ipknot

./: .gitignore  AUTHORS  CMakeLists.txt  Dockerfile  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
.devcontainer/: Dockerfile  devcontainer.json
cmake/: FindGLPK.cmake  FindGUROBI.cmake  FindHiGHS.cmake  FindILOG.cmake
examples/: ASE00001.fa  MIDV.fa  RF00005.aln  RF00005:0.fa  drz_Ppac_1_1.fa  mosaic_virus.aln
src/: InferenceEngine.cpp  InferenceEngine.h  Makefile.am  Makefile.in  ScoringModel.cpp  ScoringModel.h  aln.cpp  aln.h  boltzmann_param.c  bpseq.cpp  bpseq.h  fa.cpp  fa.h  fold.cpp  fold.h  ip.cpp  ip.h  ipknot.cpp  log_value.h  mxfold2.cpp  mxfold2.h  new_param.c  new_param.h
src/contrafold/: Config.hpp  DuplexEngine.hpp  DuplexEngine.ipp  InferenceEngine.cpp  InferenceEngine.hpp  InferenceEngine.ipp  ParameterManager.cpp  ParameterManager.hpp  SStruct.cpp  SStruct.hpp  Utilities.hpp  Utilities.ipp  rand.h
src/linearpartition/: LinearPartition.cpp  LinearPartition.h  bpp.cpp
src/linearpartition/Utils/: utility.h  utility_v.h
src/nupack/: def_param.h  dptable.h  nupack.cpp  nupack.h
utils/: eval.rb  rna2dheatmap.py
