bin_PROGRAMS = ipknot

ipknot_SOURCES = \
	ipknot.cpp ip.h ip.cpp fa.cpp fa.h \
	contrafold/InferenceEngine.hpp contrafold/InferenceEngine.ipp \
	contrafold/ParameterManager.hpp contrafold/ParameterManager.ipp \
	contrafold/SStruct.hpp contrafold/SStruct.cpp \
	contrafold/Utilities.hpp contrafold/Utilities.ipp contrafold/Utilities.cpp \
	contrafold/Defaults.ipp contrafold/LogSpace.hpp contrafold/Config.hpp contrafold/rand.h
