bin_PROGRAMS = ipknot

ipknot_SOURCES = \
	ipknot.cpp ip.h ip.cpp fa.cpp fa.h aln.cpp aln.h \
	fold.cpp fold.h new_param.c new_param.h \
	nupack/nupack.h nupack/nupack.cpp nupack/dptable.h nupack/def_param.h \
 	contrafold/Config.hpp contrafold/LogSpace.hpp \
	contrafold/Defaults.ipp contrafold/rand.h \
 	contrafold/InferenceEngine.hpp contrafold/InferenceEngine.ipp \
 	contrafold/ParameterManager.hpp contrafold/ParameterManager.ipp \
 	contrafold/SStruct.cpp contrafold/SStruct.hpp \
 	contrafold/Utilities.cpp contrafold/Utilities.hpp contrafold/Utilities.ipp 

# 	InferenceEngine.cpp InferenceEngine.h \
# 	ScoringModel.cpp ScoringModel.h \
# 	log_value.h Defaults.ipp
